# Hierarchical-Localization

./: .gitignore  .gitmodules  README.md  pipeline_Aachen.ipynb  pipeline_SfM.ipynb  pipeline_efficientLoftr_SfM.py  pipeline_loftr_SfM.py  pipeline_loma_SfM.py  pipeline_loma_sparse_SfM.py  pipeline_roma_SfM.py  pipeline_romav2_SfM.py  pipeline_sift_SfM.py  pipeline_superpoint_SfM.py  pyproject.toml
hloc/: match_dense.py  pairs_from_sequential.py  reconstruction.py  reconstruction_with_poses.py  triangulation.py  visualization.py
hloc/matchers/: efficient_loftr.py  loma.py  roma.py  romav2.py
hloc/utils/: io.py
